# mcp-cloud-finops-ai-agent

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  mcp.json  pyproject.toml  pytest-utf8.out  pytest.out  requirements.txt  ruff.toml  ruff.txt  ruff_errors.txt  test_k8s_provider.py  test_tools.py
.github/workflows/: python-ci.yml
docs/: analysis-engine.md  architecture.md  collectors.md  development.md  finops-engine.md  kubernetes-costs.md  providers.md
examples/: claude_desktop_config.json  docker-compose.yml  sample_queries.md
opsyield/: mcp_entry.py  mcp_sse.py  mcp_stdio.py
opsyield/ai/: __init__.py  engine.py
opsyield/analysis/: __init__.py  cost_analyzer.py  idle_scoring.py  recommendations.py  rightsizer.py  savings.py  waste_detector.py
opsyield/api/: __init__.py  entry.py  main.py  server.py
opsyield/billing/: __init__.py  aws.py  azure.py  base.py  gcp.py
opsyield/collectors/: __init__.py  base.py
opsyield/core/: __init__.py  aggregation.py  analysis_pipeline.py  cloud_detection.py  config.py  context.py  interfaces.py  logging.py  models.py  orchestrator.py  scheduler.py  snapshot.py
opsyield/ingestion/: __init__.py  jobs.py  scheduler.py
opsyield/intelligence/: __init__.py  analytics.py
opsyield/optimization/: __init__.py  strategies.py
opsyield/providers/: __init__.py  aws.py  azure.py  base.py  cli_utils.py  factory.py  gcp.py  kubernetes.py
opsyield/tests/: __init__.py  test_analysis.py  test_collectors.py  test_core.py  test_mcp_server.py  (+1 more)
(+22 files in other folders)
