[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "opsyield-mcp"
version = "1.3.0"
description = "Production-grade multi-cloud FinOps MCP backend"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

authors = [
    { name = "Moiz Ali Moomin" }
]

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "boto3",
    "google-cloud-bigquery",
    "google-cloud-compute",
    "google-auth",
    "google-api-core",
    "azure-identity",
    "azure-mgmt-resource",
    "azure-mgmt-compute",
    "azure-mgmt-costmanagement",
    "python-dotenv",
    "pydantic>=2",
    "httpx",
    "tenacity",
    "rich",
    "mcp"
]

[project.scripts]
opsyield-mcp = "opsyield.api.entry:main"

[tool.setuptools.packages.find]
include = ["opsyield*"]

[project.urls]
Homepage = "https://github.com/Moiz-Ali-Moomin/mcp-cloud-finops-ai-agent"
Repository = "https://github.com/Moiz-Ali-Moomin/mcp-cloud-finops-ai-agent"
Issues = "https://github.com/Moiz-Ali-Moomin/mcp-cloud-finops-ai-agent/issues"